@@ -195,6 +195,7 @@
     , "SUPPORT_FILEFORMAT_FNT" : "1"
     , "SUPPORT_FILEFORMAT_TTF" : "1"
     , "SUPPORT_TEXT_MANIPULATION" : "1"
+    , "SUPPORT_FONT_ATLAS_WHITE_REC" : "1"
     , "MAX_TEXT_BUFFER_LENGTH" : "1024"
     , "MAX_TEXTSPLIT_COUNT" : "128"
     , "SUPPORT_FILEFORMAT_OBJ" : "1"
